[package]
name = "xplane_plugin"
version = "0.1.0"
description = "Provides types and a macro for creating X-Plane plugins"
license = "MIT"
repository = "https://github.com/samcrow/rust-x-plane-plugin"
keywords = ["X-Plane", "plugin"]
authors = ["Sam Crow <samcrow@uw.edu>"]

[dependencies]
libc = "^0.2"
